themes/cli/assets/css/common/post-single.css
.post-header {
    margin: 24px auto var(--content-gap) auto;
    text-transform: uppercase;
}

.post-description {
    margin-top: 10px;
    margin-bottom: 5px;
}

.post-meta {
    color: var(--secondary);
    font-size: 14px;
    display: inline-block;
}

.breadcrumbs {
    color: var(--secondary);
    font-size: 14px;
    display: flex;
    flex-wrap: wrap;
}

.post-meta .i18n_list li {
    display: inline-flex;
    list-style: none;
    margin: auto 3px;
    box-shadow: 0 1px 0 var(--secondary);
}

.breadcrumbs a {
    font-size: 16px;
}

.post-content {
    color: var(--content);
}

/*** headers ***/

/* basically <header><h1>...so keep this consistent with H1 */
.post-title {
    margin-bottom: 2px;
    /* font-size: 24px; */
}

.post-content :is(h1, h2, h3, h4, h5, h6) {
    text-transform: uppercase;
}

.post-content h1::before {
    color: var(--secondary);
    content: '# ';
}

.post-content h2::before {
    color: var(--secondary);
    content: '## ';
}

.post-content h3::before {
    color: var(--secondary);
    content: '### ';
}

.post-content h4::before {
    color: var(--secondary);
    content: '#### ';
}

.post-content h5::before {
    color: var(--secondary);
    content: '##### ';
}

.post-content h6::before {
    color: var(--secondary);
    content: '###### ';
}

.post-content h1 {
    margin: 36px auto 28px;
}

.post-content h2 {
    margin: 32px auto 24px;
}

.post-content h3,
.post-content h4,
.post-content h5,
.post-content h6 {
    margin: 24px 0 16px;
}

.toc a:hover {
    box-decoration-break: clone;
    -webkit-box-decoration-break: clone;
}

.post-content a code {
    margin: auto 0;
}

.post-content del {
    text-decoration: line-through;
}

.post-content dl,
.post-content ol,
.post-content p,
.post-content figure,
.post-content ul {
    margin-bottom: var(--content-gap);
}

.post-content ol,
.post-content ul {
    padding-inline-start: 20px;
}

.post-content li {
    margin-top: 5px;
}

.post-content li p {
    margin-bottom: 0;
}

.post-content dl {
    display: flex;
    flex-wrap: wrap;
    margin: 0;
}

.post-content dt {
    width: 25%;
    font-weight: 700;
}

.post-content dd {
    width: 75%;
    margin-inline-start: 0;
    padding-inline-start: 10px;
}

.post-content dd ~ dd,
.post-content dt ~ dt {
    margin-top: 10px;
}

.post-content table {
    margin-bottom: var(--content-gap);
}

.post-content table th,
.post-content table:not(.highlighttable, .highlight table, .gist .highlight) td {
    min-width: 80px;
    padding: 8px 5px;
    line-height: 1.5;
    border-bottom: 1px solid var(--border);
}

.post-content table th {
    text-align: start;
}

.post-content table:not(.highlighttable) td code:only-child {
    margin: auto 0;
}

/* code blocks with syntax highlighting */
.post-content .highlight:not(table) {
    margin: 10px auto;
    background: var(--code-block-bg) !important;
    direction: ltr;
    border: 1px solid var(--border);
}

.post-content li > .highlight {
    margin-inline-end: 0;
}

.post-content ul pre {
    margin-inline-start: calc(var(--gap) * -2);
}

.post-content .highlight pre {
    margin: 0;
}

.post-content .highlighttable {
    table-layout: fixed;
}

.post-content .highlighttable td:first-child {
    width: 40px;
}

.post-content .highlighttable td .linenodiv {
    padding-inline-end: 0 !important;
}

.post-content .highlighttable td .highlight,
.post-content .highlighttable td .linenodiv pre {
    margin-bottom: 0;
}

.post-content code {
    padding: 3px 6px;
    font-family: 'Commit Mono', monospace;
    line-height: 1.5;
    background: var(--code-bg);
    color: var(--code-font-color);
}

/* code blocks without syntax highlighting */
.post-content pre code {
    display: grid;
    margin: auto 0;
    padding-top: 1rem;
    padding-bottom: 1rem;
    padding-left: 1rem;
    color: rgb(213, 213, 214);
    background: var(--code-block-bg) !important;
    border: 1px solid var(--border);
    overflow-x: auto;
    word-break: break-all;
}

.post-content blockquote {
    margin: 20px 0;
    padding: 16px 16px;
    border-inline-start: 5px solid var(--blockquote-border);
    background: var(--blockquote-background);
}

.post-content iframe {
    max-width: 100%;
}

.post-content img {
    margin: 1rem 0;
    border: 1px solid var(--border);
}

.post-content img[src*="#center"] {
    margin: 1rem auto;
}

.post-content figure.align-center {
    text-align: center;
}

.post-content figure > figcaption {
    color: var(--primary);
    font-size: 16px;
    font-weight: bold;
    margin: 8px 0 16px;
}

.post-content figure > figcaption > p {
    color: var(--secondary);
    font-size: 14px;
    font-weight: normal;
}

/* table of contents */
.toc {
    margin: 0 2px 40px 2px;
    border: 1px solid var(--primary);
    background: var(--theme);
    padding: 0.4em;
    box-shadow: 5px 5px var(--secondary);
}

.dark .toc {
    background: var(--theme);
}

.toc details summary {
    cursor: zoom-in;
    margin-inline-start: 20px;
}

.toc details[open] summary {
    cursor: zoom-out;
}

.toc .details {
    display: inline;
    font-weight: 500;
}

.toc .inner {
    margin: 0 20px;
    padding: 10px 20px;
}

.toc li ul {
    margin-inline-start: var(--gap);
}

.toc summary:focus {
    outline: 0;
}

.post-footer {
    margin-top: 56px;
}

.post-footer>* {
    margin-bottom: 10px;
}

.post-tags {
    display: inline-block;
    gap: 10px;
}

.post-tags li {
    display: inline-block;
}

.share-buttons,
.paginav {
    border: 1px solid var(--border);
}

.post-tags a {
    display: inline-block;
    color: var(--tint-2);
    font-size: 12px;
    line-height: 24px;
}

.post-tags a::before {
    content: "[";
    color: var(--tertiary);
}

.post-tags a::after {
    content: "]";
    color: var(--tertiary);
}

.share-buttons {
    padding: 10px;
    display: flex;
    justify-content: center;
    overflow-x: auto;
    gap: 10px;
}

.share-buttons li,
.share-buttons a {
    display: inline-flex;
}

.share-buttons a:not(:last-of-type) {
    margin-inline-end: 12px;
}

.paginav {
    display: flex;
    line-height: 30px;
}

.paginav a {
    padding-inline-start: 14px;
    padding-inline-end: 14px;
}

.paginav .title {
    letter-spacing: 1px;
    text-transform: uppercase;
    font-size: small;
    color: var(--secondary);
}

.paginav .prev,
.paginav .next {
    width: 50%;
}

.paginav span:hover:not(.title) {
    box-shadow: 0 1px 0;
}

.paginav .next {
    margin-inline-start: auto;
    text-align: right;
}

[dir="rtl"] .paginav .next {
    text-align: left;
}

h1>a>svg {
    display: inline;
}

/* RSS svg next to category in category view */
.page-header h1 a svg {
    width: 1.1em;
    height: 1.1em;
    vertical-align: middle;
}

img.in-text {
    display: inline;
    margin: auto;
}

